# total-commander-log-viewer

./: README.md
.github/actions/agent-setup/: action.yml
.github/workflows/: ci-build.yml  ci-release.yml  codeql-analysis.yml  totalcmd-plugin-release.yml
docs/: total_commander_lister.md
packaging/windows/: klogg.nsi  prepare_release.cmd
packaging/windows/totalcmd/: pluginst.inf.in
src/: CMakeLists.txt
src/app/: klogg_grep.cpp  main.cpp
src/plugins/: CMakeLists.txt
src/plugins/total_commander_lister/: CMakeLists.txt
src/plugins/total_commander_lister/include/: lister_plugin_api.h  lister_viewer_widget.h
src/plugins/total_commander_lister/src/: lister_plugin.cpp  lister_viewer_widget.cpp
src/settings/include/: persistentinfo.h
src/settings/src/: persistentinfo.cpp
tests/ui/: qtests_main.cpp
tests/unit/: tests_main.cpp
